# agent_debugger

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_ENTRY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEARNING.md  LICENSE  Makefile  README.md  SDK_README.md  SECURITY.md  TESTING_IMPROVEMENT_PLAN.md  TESTING_LEARNINGS_AND_RECOMMENDATIONS.md  TESTING_NEXT_ITERation.md  TESTING_QUICK_START.md  TESTING_SESSION_SUMMARY.md  TESTING_SUMMARY.md  agent_debugger.db.backup  alembic.ini  cli.py  docker-compose.yml  fly.toml  package-lock.json  package.json  peaky-peek-course.html  pyproject-server.toml  pyproject.toml  pyrightconfig.json  security_best_practices_report.md  test_integration.py  test_research_workflows.py
.claude/: settings.json
.claude/agents/: architecture-guard.md  contract-sync.md  security-review.md
.claude/commands/: ddd.md  health.md  pre-release.md  quality.md  refactor.md  release.md  repo-map.md  test-frontend.md  test-security.md  test.md  ui-component.md  ui-polish.md  ui-preview.md  upgrade.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-scan.yml  docs-pages.yml  pages.yml  publish.yml  secret-scan.yml
.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
agent_debugger_sdk/: README.md  __init__.py  auto_instrument.py  cli.py  config.py  drift.py  pricing.py  simple.py  transport.py
agent_debugger_sdk/adapters/: __init__.py  hindsight.py  langchain.py  langchain_utils.py  pydantic_ai.py
agent_debugger_sdk/auto_patch/: __init__.py  _transport.py  frame_capture.py  registry.py
agent_debugger_sdk/checkpoints/: __init__.py  hooks.py  schemas.py  validation.py
agent_debugger_sdk/core/: __init__.py  _legacy_events.py  causal_tracer.py  checkpoint_manager.py  conformal_scorer.py  context.py  decorators.py  divergence_detector.py  emitter.py  error_attribution.py  events.py  frame_tracer.py  reasoning_editor.py  recorders.py  redundancy_scorer.py  safety_monitor.py  scorer.py  (+5 more)
api/: __init__.py  analytics_db.py  analytics_routes.py  app_context.py  audit_routes.py  auth_routes.py  cli.py  comparison_routes.py  config.py  cost_routes.py  cross_session_routes.py  dependencies.py  entity_routes.py  errors.py  exceptions.py  health_routes.py  main.py  middleware.py  policy_routes.py  rate_limit.py  reasoning_routes.py  replay_routes.py  research_routes.py  schemas.py  schemas_alerts.py  schemas_analysis.py  schemas_core.py  search_routes.py  services.py  session_routes.py  stepper_routes.py  swimlane_routes.py  system_routes.py  trace_routes.py  ui_routes.py  violation_routes.py
auth/: __init__.py  api_keys.py  middleware.py  models.py  service.py
benchmarks/: __init__.py  seed_data.py  seed_enrichment.py
collector/: __init__.py  alert_persister.py  baseline.py  behavior_monitor.py  buffer.py  buffer_base.py  buffer_redis.py  causal_analysis.py  cross_session_clustering.py  detection.py  escalation_detection.py  failure_diagnostics.py  failure_memory.py  highlights.py  intelligence.py  live_monitor.py  models.py  persistence.py  policy_analysis.py  protocols.py  replay.py  replay_collapse.py  rolling.py  scorer.py  server.py
docs/: Agent_Debugger_Improvement_Proposal.docx  CI_FIX_summary.md  FEEDBACK_ON_RECENT_WORK.md  HINDSIGHT_INTEGRATION.md  NO_BRAINER_FEATURES_PLAN.md  PLANNING_STATUS_REPORT.md  README.md  REAL_WORLD_AGENT_FAILURE_PATTERNS.md  architecture.md  code-audit-paper-concepts.md  competitive-roadmap.md  competitive-strategy-research.md  console-workflows.md  course.html  edge-action-plan.md  framework-adapters-research.md  getting-started.md  how-it-works.md  improvement-roadmap.md  index.html  intro.md  lessons-learned.md  peaky-peek-course.html  progress.md  repo-overview.md  research-implementation-plan.md  research-inspiration.md  research-papers-deep-dive.md  robots.txt  scheduled-tasks.md  sitemap.xml  stats.html  style.css
docs-site/: build.sh  mkdocs.yml  requirements.txt
examples/: 01_hello.py  02_research_agent.py  03_langchain.py  04_pydantic_ai.py  05_checkpoint_replay.py  06_safety_audit.py  07_loop_detection.py  08_live_stream.py  README.md  demo_live_stream.py  demo_safety_audit.py  hello_agent.py  mock_research_agent.py
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
old_docs/: architecture.md  improvement-roadmap.md  progress.md  research-inspiration.md
redaction/: __init__.py  patterns.py  pipeline.py
scripts/: auto-worker.sh  check_dead_code.sh  debt-scan.sh  pr-review-responder.sh  record_demo_gifs.js  seed_demo_sessions.py
storage/: __init__.py  analytics_migrations.py  cache.py  converters.py  embedding.py  engine.py  entities.py  models.py  repository.py  retention.py  retention_enforcement.py  search.py
templates/: README.md  api_route.py.template  frontend_component.tsx.template  pydantic_schema.py.template
tests/: conftest.py  conftest_no_brainery.py  test_adaptive_intelligence.py  test_alert_lifecycle.py  test_alerts.py  test_analytics_db.py  test_analytics_routes.py  test_api_auth.py  test_api_contract.py  test_api_main_unit.py  test_api_replay_routes_coverage.py  test_api_validation.py  test_app_config.py  test_audit_engine.py  test_auth.py  test_auth_middleware_unit.py  test_auth_routes.py  test_auth_routes_unit.py  test_auto_instrument.py  test_baseline.py  test_baseline_bugs_and_edge_cases.py  test_benchmarks.py  test_buffer_backends_unit.py  test_buffer_fakes.py  test_buffer_interface.py  test_buffer_redis.py  test_causal_analysis.py  test_check_duplicate_queries.py  test_checkpoint_restore.py  test_cli.py  test_collector_baseline.py  test_collector_buffer.py  test_collector_failure_diagnostics.py  test_collector_persistence.py  test_collector_replay.py  test_collector_server_regressions.py  test_collector_server_unit.py  test_comparison_routes.py  test_concurrency.py  test_cost_api.py  (+82 more)
under-the-hood/: index.html
(+462 files in other folders)
