[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-debugger"
version = "1.0.0"
description = "Visual debugging tool for AI agents that captures execution traces, visualizes decision trees, enables time-travel debugging, and provides real-time monitoring."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Agent Debugger Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
server = []
cloud = []

[project.urls]
Homepage = "https://github.com/amplifier/ai_working/agent_debugger"
Documentation = "https://github.com/amplifier/ai_working/agent_debugger/blob/main/README.md"
Repository = "https://github.com/amplifier/ai_working/agent_debugger.git"
Issues = "https://github.com/amplifier/ai_working/agent_debugger/issues"

[tool.uvicorn]
host = "0.0.0.0"
port = 8080
reload = false
workers = 1

[tool.alembic]
script_location = "storage/migrations"
sqlalchemy.url = "sqlite+aiosqlite:///./agent_debugger.db"