[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-debugger"
version = "0.1.0"
description = "Agent-native debugger for AI agents. See why your agent did that."
readme = "SDK_README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Agent Debugger Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.40"]
pydantic-ai = ["pydantic-ai>=0.0.10"]
all = ["agent-debugger[langchain,crewai,pydantic-ai]"]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.12",
]
cloud = [
    "agent-debugger[server]",
    "asyncpg>=0.28",
    "redis[hiredis]>=5.0",
    "aiobotocore>=2.7",
    "bcrypt>=4.0",
]

[project.urls]
Homepage = "https://agentdebugger.dev"
Repository = "https://github.com/agentdebugger/agent-debugger"
Documentation = "https://docs.agentdebugger.dev"

[tool.hatch.build.targets.wheel]
packages = ["agent_debugger_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]