[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peaky-peek"
version = "0.1.17"
description = "Lightweight tracing SDK for AI agents. Capture decisions, tool calls, and LLM events with one context manager."
readme = "SDK_README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "acailic", email = "acailic@users.noreply.github.com" },
]
keywords = ["ai", "agents", "debugging", "tracing", "observability", "langchain", "crewai", "pydantic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.40"]
pydantic-ai = ["pydantic-ai>=0.0.10"]
all = [
    "langchain-core>=0.2",
    "crewai>=0.40",
    "pydantic-ai>=0.0.10",
]
dev = [
    "bandit>=1.7",
    "pre-commit>=3.0",
    "pyright>=1.1",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "ruff>=0.1",
    "vulture>=2.0",
]

[project.scripts]
peaky-peek = "agent_debugger_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/acailic/agent_debugger"
Repository = "https://github.com/acailic/agent_debugger"
Issues = "https://github.com/acailic/agent_debugger/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_debugger_sdk"]

[tool.hatch.build]
exclude = [
    ".venv-ci",
    "traces",
    "dist",
    "build",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "agent_debugger_sdk/adapters/tests"]
addopts = "-ra --timeout=120 -m 'not integration'"
timeout = 120
xfail_strict = true
markers = [
    "integration: End-to-end tests requiring API keys (deselected by default)",
]

[tool.coverage.run]
source = ["agent_debugger_sdk", "api", "storage", "collector", "auth", "redaction"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/dist/*",
    "*/build/*",
    "*/.venv*",
    "*/migrations/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
fail_under = 70
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"tests/conftest.py" = ["E402"]
"agent_debugger_sdk/adapters/tests/*" = ["E501"]
"collector/intelligence.py" = ["E501"]
